Updated environment script and NB1 and Makefile

--- a/code/01-hello-world/NB01-hello-world.ipynb
+++ b/code/01-hello-world/NB01-hello-world.ipynb
@@ -40,21 +40,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+ . /tools/emu/pathfinder-sw/set-lucata-env.sh\r\n",
-      "+ LUCATA_TOOLCHAIN_BASE=/tools/emu/pathfinder-sw\r\n",
-      "+ LUCATA_VERSION=22.02\r\n",
-      "+ export LUCATA_TOOLCHAIN_DIR=/tools/emu/pathfinder-sw/22.02\r\n",
-      "+ export PATH=/tools/emu/pathfinder-sw/22.02/bin:/nethome/jyoung9/.cargo/bin:/opt/slurm/current/bin/:/usr/local/go/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/snap/bin:/nethome/jyoung9/go/bin:/nethome/jyoung9/.local/bin:/nethome/jyoung9/bin\r\n",
-      "+ export LD_LIBRARY_PATH=/tools/emu/pathfinder-sw/22.02/lib:\r\n",
-      "+ export LD_LIBRARY_PATH=/tools/emu/pathfinder-sw/22.02/lib::/usr/lib/x86_64-linux-gnu/\r\n",
-      "+ echo Lucata tools are added to current path from /tools/emu/pathfinder-sw/22.02\r\n",
-      "Lucata tools are added to current path from /tools/emu/pathfinder-sw/22.02\r\n",
-      "+ set +x\r\n"
+      "+ . /tools/emu/pathfinder-sw/set-lucata-beta-env.sh\n",
+      "++ LUCATA_TOOLCHAIN_BASE=/tools/lucata/pathfinder-sw\n",
+      "++ LUCATA_VERSION=22.09-beta\n",
+      "++ export LUCATA_TOOLCHAIN_DIR=/tools/lucata/pathfinder-sw/22.09-beta\n",
+      "++ LUCATA_TOOLCHAIN_DIR=/tools/lucata/pathfinder-sw/22.09-beta\n",
+      "++ export PATH=/tools/lucata/pathfinder-sw/22.09-beta/bin:/nethome/jyoung9/.cargo/bin:/opt/slurm/current/bin:/usr/local/bin:/usr/bin:/usr/local/sbin:/usr/sbin:/nethome/jyoung9/.local/bin:/nethome/jyoung9/bin\n",
+      "++ PATH=/tools/lucata/pathfinder-sw/22.09-beta/bin:/nethome/jyoung9/.cargo/bin:/opt/slurm/current/bin:/usr/local/bin:/usr/bin:/usr/local/sbin:/usr/sbin:/nethome/jyoung9/.local/bin:/nethome/jyoung9/bin\n",
+      "++ export LD_LIBRARY_PATH=/tools/lucata/pathfinder-sw/22.09-beta/lib:/opt/slurm/current/lib:\n",
+      "++ LD_LIBRARY_PATH=/tools/lucata/pathfinder-sw/22.09-beta/lib:/opt/slurm/current/lib:\n",
+      "++ export LD_LIBRARY_PATH=/tools/lucata/pathfinder-sw/22.09-beta/lib:/opt/slurm/current/lib::/usr/lib/x86_64-linux-gnu/\n",
+      "++ LD_LIBRARY_PATH=/tools/lucata/pathfinder-sw/22.09-beta/lib:/opt/slurm/current/lib::/usr/lib/x86_64-linux-gnu/\n",
+      "++ echo 'Lucata tools are added to current path from /tools/lucata/pathfinder-sw/22.09-beta'\n",
+      "Lucata tools are added to current path from /tools/lucata/pathfinder-sw/22.09-beta\n",
+      "+ set +x\n"
      ]
     }
    ],
    "source": [
-    "!set -x;. /tools/emu/pathfinder-sw/set-lucata-env.sh; set +x"
+    "!set -x;. /tools/emu/pathfinder-sw/set-lucata-beta-env.sh; set +x"
    ]
   },
   {
@@ -74,8 +78,8 @@
      "output_type": "stream",
      "text": [
       "/nethome/jyoung9/tmp/lucata-pathfinder-tutorial/code\n",
-      "/tools/emu/pathfinder-sw/22.02/bin/emu-cc\n",
-      "Lucata compilation flags are -I/tools/lucata/pathfinder-sw/22.02/include/memoryweb/ -L/tools/lucata/pathfinder-sw/22.02/lib -lmemoryweb\n"
+      "/tools/emu/pathfinder-sw/22.09-beta/bin/emu-cc\n",
+      "Lucata compilation flags are -I/tools/lucata/pathfinder-sw/22.09-beta/include/memoryweb/ -L/tools/lucata/pathfinder-sw/22.09-beta/lib -lmemoryweb\n"
      ]
     }
    ],
@@ -84,8 +88,8 @@
     "\n",
     "#Get the path to where all code samples are\n",
     "os.environ[\"USER_NOTEBOOK_CODE\"]=os.path.dirname(os.getcwd())\n",
-    "os.environ[\"PATH\"]=os.pathsep.join([\"/tools/emu/pathfinder-sw/22.02/bin\",os.environ[\"PATH\"]])\n",
-    "os.environ[\"FLAGS\"]=\"-I/tools/lucata/pathfinder-sw/22.02/include/memoryweb/ -L/tools/lucata/pathfinder-sw/22.02/lib -lmemoryweb\"\n",
+    "os.environ[\"PATH\"]=os.pathsep.join([\"/tools/emu/pathfinder-sw/22.09-beta/bin\",os.environ[\"PATH\"]])\n",
+    "os.environ[\"FLAGS\"]=\"-I/tools/lucata/pathfinder-sw/22.09-beta/include/memoryweb/ -L/tools/lucata/pathfinder-sw/22.09-beta/lib -lmemoryweb\"\n",
     "\n",
     "!echo $USER_NOTEBOOK_CODE\n",
     "#Print out which Emu compiler, emu-cc, we are using\n",
@@ -169,7 +173,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hello-world-naive.mwx\n"
+      "hello-world.mwx\n",
+      "hello-world-naive.mwx\n",
+      "hello-world-spawn-at.mwx\n",
+      "hello-world-spawn.mwx\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/net/tools/emu/pathfinder-sw/22.09-beta/bin/clang: /lib64/libtinfo.so.5: no version information available (required by /net/tools/emu/pathfinder-sw/22.09-beta/bin/clang)\n",
+      "/net/tools/emu/pathfinder-sw/22.09-beta/bin/clang-6.0: /lib64/libtinfo.so.5: no version information available (required by /net/tools/emu/pathfinder-sw/22.09-beta/bin/clang-6.0)\n",
+      "/net/tools/emu/pathfinder-sw/22.09-beta/bin/opt: /lib64/libtinfo.so.5: no version information available (required by /net/tools/emu/pathfinder-sw/22.09-beta/bin/opt)\n",
+      "/net/tools/emu/pathfinder-sw/22.09-beta/bin/opt: /lib64/libtinfo.so.5: no version information available (required by /net/tools/emu/pathfinder-sw/22.09-beta/bin/opt)\n"
      ]
     }
    ],
@@ -188,10 +205,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start untimed simulation with local date and time= Wed Aug 31 14:10:59 2022\n",
+      "Start untimed simulation with local date and time= Wed Sep 14 14:41:59 2022\n",
       "\n",
       "Hello, world!\n",
-      "End untimed simulation with local date and time= Wed Aug 31 14:10:59 2022\n",
+      "End untimed simulation with local date and time= Wed Sep 14 14:41:59 2022\n",
       "\n"
      ]
     },
@@ -200,7 +217,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "        SystemC 2.3.3-Accellera --- Feb 22 2022 09:27:12\n",
+      "        SystemC 2.3.3-Accellera --- Sep  7 2022 09:15:59\n",
       "        Copyright (c) 1996-2018 by all Contributors,\n",
       "        ALL RIGHTS RESERVED\n"
      ]
@@ -208,8 +225,8 @@
    ],
    "source": [
     "%%bash\n",
-    "#Run a basic simulation with memory size 2^21, one node, and the naive Hello World executable as input\n",
-    "emusim.x -m 21 --total_nodes 1 -- hello-world-naive.mwx"
+    "#Run a basic simulation with memory size 2^24, one node, and the naive Hello World executable as input\n",
+    "emusim.x -m 24 --total_nodes 1 -- hello-world-naive.mwx"
    ]
   },
   {
@@ -276,7 +293,19 @@
      "output_type": "stream",
      "text": [
       "hello-world.mwx\n",
-      "hello-world-naive.mwx\n"
+      "hello-world-naive.mwx\n",
+      "hello-world-spawn-at.mwx\n",
+      "hello-world-spawn.mwx\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/net/tools/emu/pathfinder-sw/22.09-beta/bin/clang: /lib64/libtinfo.so.5: no version information available (required by /net/tools/emu/pathfinder-sw/22.09-beta/bin/clang)\n",
+      "/net/tools/emu/pathfinder-sw/22.09-beta/bin/clang-6.0: /lib64/libtinfo.so.5: no version information available (required by /net/tools/emu/pathfinder-sw/22.09-beta/bin/clang-6.0)\n",
+      "/net/tools/emu/pathfinder-sw/22.09-beta/bin/opt: /lib64/libtinfo.so.5: no version information available (required by /net/tools/emu/pathfinder-sw/22.09-beta/bin/opt)\n",
+      "/net/tools/emu/pathfinder-sw/22.09-beta/bin/opt: /lib64/libtinfo.so.5: no version information available (required by /net/tools/emu/pathfinder-sw/22.09-beta/bin/opt)\n"
      ]
     }
    ],
@@ -295,16 +324,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start untimed simulation with local date and time= Wed Aug 31 14:11:01 2022\n",
-      "\n",
-      "End untimed simulation with local date and time= Wed Aug 31 14:11:01 2022\n",
-      "\n",
-      "SysC Enumeration done. Program launching...\n",
-      "Simulation @0 s with local date and time= Wed Aug 31 14:11:01 2022\n",
+      "Start untimed simulation with local date and time= Wed Sep 14 14:42:14 2022\n",
       "\n",
       "Hello, world!\n",
-      "\n",
-      "Info: /OSCI/SystemC: Simulation stopped by user.\n"
+      "End untimed simulation with local date and time= Wed Sep 14 14:42:14 2022\n",
+      "\n"
      ]
     },
     {
@@ -312,7 +336,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "        SystemC 2.3.3-Accellera --- Feb 22 2022 09:27:12\n",
+      "        SystemC 2.3.3-Accellera --- Sep  7 2022 09:15:59\n",
       "        Copyright (c) 1996-2018 by all Contributors,\n",
       "        ALL RIGHTS RESERVED\n"
      ]
@@ -320,7 +344,7 @@
    ],
    "source": [
     "%%bash\n",
-    "emusim.x -m 21 --total_nodes 1 -- hello-world.mwx"
+    "emusim.x -m 24 --total_nodes 1 -- hello-world.mwx"
    ]
   },
   {
@@ -376,29 +400,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start untimed simulation with local date and time= Wed Aug 31 14:11:04 2022\n",
-      "\n",
-      "End untimed simulation with local date and time= Wed Aug 31 14:11:04 2022\n",
-      "\n",
-      "SysC Enumeration done. Program launching...\n",
-      "Simulation @0 s with local date and time= Wed Aug 31 14:11:04 2022\n",
+      "Start untimed simulation with local date and time= Wed Sep 14 14:42:26 2022\n",
       "\n",
       "Hello, world!\n",
+      "End untimed simulation with local date and time= Wed Sep 14 14:42:26 2022\n",
       "\n",
-      "Info: /OSCI/SystemC: Simulation stopped by user.\n",
       "hello-world-spawn.c\n",
       "hello-world-spawn.cdc\n",
-      "hello-world-spawn.mps\n",
-      "hello-world-spawn.mwx\n",
-      "hello-world-spawn.vsf\n"
+      "hello-world-spawn.mwx\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/net/tools/emu/pathfinder-sw/22.09-beta/bin/clang: /lib64/libtinfo.so.5: no version information available (required by /net/tools/emu/pathfinder-sw/22.09-beta/bin/clang)\n",
+      "/net/tools/emu/pathfinder-sw/22.09-beta/bin/clang-6.0: /lib64/libtinfo.so.5: no version information available (required by /net/tools/emu/pathfinder-sw/22.09-beta/bin/clang-6.0)\n",
+      "/net/tools/emu/pathfinder-sw/22.09-beta/bin/opt: /lib64/libtinfo.so.5: no version information available (required by /net/tools/emu/pathfinder-sw/22.09-beta/bin/opt)\n",
+      "/net/tools/emu/pathfinder-sw/22.09-beta/bin/opt: /lib64/libtinfo.so.5: no version information available (required by /net/tools/emu/pathfinder-sw/22.09-beta/bin/opt)\n",
       "\n",
-      "        SystemC 2.3.3-Accellera --- Feb 22 2022 09:27:12\n",
+      "        SystemC 2.3.3-Accellera --- Sep  7 2022 09:15:59\n",
       "        Copyright (c) 1996-2018 by all Contributors,\n",
       "        ALL RIGHTS RESERVED\n"
      ]
@@ -410,7 +431,7 @@
     "#Compile the code\n",
     "emu-cc -o hello-world-spawn.mwx $FLAGS hello-world-spawn.c\n",
     "#Note that we are simulating this with at least 4 nodes! This should give us different statistics than the previous examples\n",
-    "emusim.x -m 21 --total_nodes 4 -- hello-world-spawn.mwx\n",
+    "emusim.x -m 24 --total_nodes 4 -- hello-world-spawn.mwx\n",
     "#Then we can print out all the output files that were generated.\n",
     "ls hello-world-spawn.*"
    ]
@@ -457,33 +478,25 @@
       "Program Name/Arguments: \n",
       "hello-world-spawn.mwx \n",
       "************************************************\n",
-      "Simulator Version: 22.2.22\n",
+      "Simulator Version: 22.8.31-lubase\n",
       "************************************************\n",
       "Configuration Details:\n",
       "Ring Model = Stratix: 3 GC Clusters, 8 MSPs\n",
       "Number of Nodes=4\n",
-      "Total Memory (in MiB)=8\n",
+      "Total Memory (in MiB)=64\n",
       "Logical MSPs per Node=1\n",
-      "Log2 Memory Size per MSP=21\n",
+      "Log2 Memory Size per MSP=24\n",
       "GC Clusters per Node=3\n",
       "GCs per Cluster=8\n",
-      "Capture queue depths=false\n",
-      "Core Clock=180 MHz, Pd=5.556\n",
-      "Memory DDR4-2133: Bandwidth = 1.886 GiB/s = 2.025 GB/s\n",
-      "SRIO SystemIC bandwidth=2.32 GiB/s (2.5GB/s)\n",
       "************************************************\n",
-      "PROGRAM ENDED.\n",
-      "Emu system run time 0.000624 sec==624494400 ps\n",
+      "Emu system run time 0 sec==0 ps\n",
       "System thread counts:\n",
-      "\tactive=1, created=15, died=14,\n",
-      "\tmax live=4 first occurred @47808552 ps with prog 7.66% complete\n",
-      "\tand last occurred @47808552 ps with prog 11.6% complete\n",
-      "Num_Core_Cycles=112400\n",
-      "Num_SRIO_Cycles=390309\n",
-      "Num_Mem_Cycles=158099\n",
+      "\tactive=0, created=0, died=0,\n",
+      "\tmax live=0 first occurred @0 s with prog -nan% complete\n",
+      "\tand last occurred @0 s with prog -nan% complete\n",
       "************************************************\n",
       "************************************************\n",
-      "Simulator wall clock time (seconds): 9\n"
+      "Simulator wall clock time (seconds): 0\n"
      ]
     }
    ],
@@ -516,38 +529,16 @@
       "> hello-world-spawn.mwx \n",
       "9,10c9,10\n",
       "< Number of Nodes=1\n",
-      "< Total Memory (in MiB)=2\n",
+      "< Total Memory (in MiB)=16\n",
       "---\n",
       "> Number of Nodes=4\n",
-      "> Total Memory (in MiB)=8\n",
-      "21c21\n",
-      "< Emu system run time 0.000623 sec==623383200 ps\n",
-      "---\n",
-      "> Emu system run time 0.000624 sec==624494400 ps\n",
-      "23,28c23,28\n",
-      "< \tactive=1, created=1, died=0,\n",
-      "< \tmax live=1 first occurred @0 s with prog 0% complete\n",
-      "< \tand last occurred @0 s with prog 0% complete\n",
-      "< Num_Core_Cycles=112200\n",
-      "< Num_SRIO_Cycles=389614\n",
-      "< Num_Mem_Cycles=157818\n",
-      "---\n",
-      "> \tactive=1, created=15, died=14,\n",
-      "> \tmax live=4 first occurred @47808552 ps with prog 7.66% complete\n",
-      "> \tand last occurred @47808552 ps with prog 11.6% complete\n",
-      "> Num_Core_Cycles=112400\n",
-      "> Num_SRIO_Cycles=390309\n",
-      "> Num_Mem_Cycles=158099\n",
-      "31c31\n",
-      "< Simulator wall clock time (seconds): 1\n",
-      "---\n",
-      "> Simulator wall clock time (seconds): 9\n"
+      "> Total Memory (in MiB)=64\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
-    "diff hello-world.cdc hello-world-spawn.cdc"
+    "! diff hello-world.cdc hello-world-spawn.cdc"
    ]
   },
   {
@@ -603,7 +594,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
