--- a/code/02-saxpy-basics/NB02-saxpy-basics.ipynb
+++ b/code/02-saxpy-basics/NB02-saxpy-basics.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Initial steps: We must import specific environment variables to point to the user's notebook code director and to the Lucata tools."
+    "First we set environment variables to point to the user's notebook code and to the Lucata tools."
    ]
   },
   {
@@ -35,7 +35,7 @@
     "\n",
     "Our first example shows an example of Single-precision AX Plus Y (SAXPY), a basic linear algebra kernel that combines scalar multiplication and vector addition. As shown in the saxpy kernel, the output, `y`, is equal to the sum of the constant `a` multiplied by the elements of a vector `x`. \n",
     "\n",
-    "This first example shows how to implement SAXPY using the most basic Cilk functions, `cilk_spawn` and `cilk_sync`. Note that the Lucata architecture operates on a particular \"grain size\", which is specified by the number of threads (argument 1). \n",
+    "This first example shows how to implement SAXPY using the Cilk functions, `cilk_spawn` and `cilk_sync`. Note that the Lucata architecture operates on a particular \"grain size\", which is specified by the number of threads (the first argument to the program). \n",
     "\n",
     "*For examples of SAXPY in other parallel languages please check out this [NVIDIA developer blog on SAXPY](https://developer.nvidia.com/blog/six-ways-saxpy/)."
    ]
@@ -86,16 +86,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start untimed simulation with local date and time= Tue Aug  2 10:23:15 2022\n",
+      "Start untimed simulation with local date and time= Tue Sep 13 14:24:47 2022\n",
       "\n",
-      "End untimed simulation with local date and time= Tue Aug  2 10:23:15 2022\n",
+      "End untimed simulation with local date and time= Tue Sep 13 14:24:47 2022\n",
       "\n"
      ]
     },
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
       "0: 0, 4, 5, 0\n",
       "\n",
       "NodeID: num_reads, num_writes, num_rmws\n",
-      "0: 69, 85, 20\n",
+      "0: 63, 58, 28\n",
       "\n"
      ]
     }
@@ -937,12 +937,133 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "#!make clean"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# %load saxpy.c\n",
+    "#include <stdio.h>\n",
+    "#include <stdlib.h>\n",
+    "#include <cilk/cilk.h>\n",
+    "\n",
+    "void saxpy(long n, float a, float *x, float *y)\n",
+    "{\n",
+    "  for (long i = 0; i < n; i++)\n",
+    "    y[i] += a * x[i];\n",
+    "}\n",
+    "\n",
+    "int main(int argc, char **argv)\n",
+    "{\n",
+    "  long nth = atol(argv[1]); // number threads\n",
+    "  long size = atol(argv[2]); // array size\n",
+    "  float aval = atof(argv[3]); // constant\n",
+    "  float *x = malloc(size * sizeof(*x));\n",
+    "  float *y = malloc(size * sizeof(*y));\n",
+    "  for (long i = 0; i < size; i++) {\n",
+    "    x[i] = i; y[i] = 0;\n",
+    "  }\n",
+    "  long grain = size / nth; // elts per thread\n",
+    "  for (long i = 0, j = 0; i < nth; i++, j += grain)\n",
+    "    cilk_spawn saxpy(grain, aval, &x[j], &y[j]);\n",
+    "  cilk_sync;\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from IPython.display import Javascript, display"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Javascript' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m-------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                   Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-11-da0b59fd9e21>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mJavascript\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'Javascript' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "Javascript"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import IPython"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'IPython.display' has no attribute 'Code'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m-------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m              Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-17-50810cc91e11>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mIPython\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdisplay\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mCode\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'IPython.display' has no attribute 'Code'"
+     ]
+    }
+   ],
+   "source": [
+    "IPython.display.Code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(5, 5, 0, '')"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "IPython.version_info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
