Minor changes to NB01.

--- a/code/01-hello-world/NB01-hello-world.ipynb
+++ b/code/01-hello-world/NB01-hello-world.ipynb
@@ -79,7 +79,8 @@
     "#Get the path to where all code samples are\n",
     "os.environ[\"USER_NOTEBOOK_CODE\"]=os.path.dirname(os.getcwd())\n",
     "os.environ[\"PATH\"]=os.pathsep.join([\"/tools/emu/pathfinder-sw/22.09-beta/bin\",os.environ[\"PATH\"]])\n",
-    "os.environ[\"FLAGS\"]=\"-I/tools/lucata/pathfinder-sw/22.09-beta/include/memoryweb/ -L/tools/lucata/pathfinder-sw/22.09-beta/lib -lmemoryweb\""
+    "os.environ[\"FLAGS\"]=\"-I/tools/lucata/pathfinder-sw/22.09-beta/include/memoryweb/ -L/tools/lucata/pathfinder-sw/22.09-beta/lib -lmemoryweb\"\n",
+    "os.environ[\"LUCATA_BASE\"]=\"/tools/emu/pathfinder-sw/22.09-beta/\""
    ]
   },
   {
@@ -195,9 +196,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hello-world.mwx\n",
-      "hello-world-naive.mwx\n",
-      "hello-world-spawn.mwx\n"
+      "hello-world-naive.mwx\n"
      ]
     }
    ],
@@ -216,12 +215,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start untimed simulation with local date and time= Sun Sep 18 01:07:07 2022\n",
+      "Start untimed simulation with local date and time= Sun Sep 18 16:46:55 2022\n",
       "\n",
-      "[WARN]: In /home/tdysart/Toolchains/22.R2-Sept7/llvm-cilk/mwsim/src/timsim.cpp:sc_main:590 Calling READCNTRS when not profiling!\n",
       "Timed simulation starting...\n",
       "Hello, world!\n",
-      "End untimed simulation with local date and time= Sun Sep 18 01:07:11 2022\n",
+      "End untimed simulation with local date and time= Sun Sep 18 16:46:58 2022\n",
       "\n",
       "\n",
       "Info: /OSCI/SystemC: Simulation stopped by user.\n"
@@ -288,8 +286,6 @@
     "     for (long k = 0; k < n; ++k)\n",
     "          str_out[k] = (char)ptr[k]; // Migration and remote write\n",
     "\n",
-    "     cilk_sync;\n",
-    "     \n",
     "     printf(\"%s\\n\", str_out);  // Migration back\n",
     "    \n",
     "     // Profiler end commands.\n",
@@ -318,8 +314,7 @@
      "output_type": "stream",
      "text": [
       "hello-world.mwx\n",
-      "hello-world-naive.mwx\n",
-      "hello-world-spawn.mwx\n"
+      "hello-world-naive.mwx\n"
      ]
     }
    ],
@@ -338,12 +333,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start untimed simulation with local date and time= Sun Sep 18 01:07:13 2022\n",
+      "Start untimed simulation with local date and time= Sun Sep 18 16:47:00 2022\n",
       "\n",
-      "[WARN]: In /home/tdysart/Toolchains/22.R2-Sept7/llvm-cilk/mwsim/src/timsim.cpp:sc_main:590 Calling READCNTRS when not profiling!\n",
       "Timed simulation starting...\n",
       "Hello, world!\n",
-      "End untimed simulation with local date and time= Sun Sep 18 01:07:16 2022\n",
+      "End untimed simulation with local date and time= Sun Sep 18 16:47:03 2022\n",
       "\n",
       "\n",
       "Info: /OSCI/SystemC: Simulation stopped by user.\n"
@@ -407,6 +401,8 @@
     "     for (long k = 0; k < n; ++k)\n",
     "          cilk_spawn copy_ptr (&str_out[k], &ptr[k]);\n",
     "\n",
+    "     cilk_sync;\n",
+    "    \n",
     "     printf(\"%s\\n\", str_out);  // Migration back\n",
     "     \n",
     "     // Profiler end commands.\n",
@@ -425,12 +421,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start untimed simulation with local date and time= Sun Sep 18 01:07:19 2022\n",
+      "Start untimed simulation with local date and time= Sun Sep 18 16:47:06 2022\n",
       "\n",
-      "[WARN]: In /home/tdysart/Toolchains/22.R2-Sept7/llvm-cilk/mwsim/src/timsim.cpp:sc_main:590 Calling READCNTRS when not profiling!\n",
       "Timed simulation starting...\n",
       "Hello, world!\n",
-      "End untimed simulation with local date and time= Sun Sep 18 01:07:43 2022\n",
+      "End untimed simulation with local date and time= Sun Sep 18 16:47:30 2022\n",
       "\n",
       "\n",
       "Info: /OSCI/SystemC: Simulation stopped by user.\n",
@@ -516,11 +511,11 @@
       "GC Clusters per Node=3\n",
       "GCs per Cluster=8\n",
       "************************************************\n",
-      "Emu system run time 0.000656 sec==655608000 ps\n",
+      "Emu system run time 0.000667 sec==666720000 ps\n",
       "System thread counts:\n",
       "\tactive=0, created=14, died=14,\n",
-      "\tmax live=3 first occurred @58091968 ps with prog 8.86% complete\n",
-      "\tand last occurred @58091968 ps with prog 12.8% complete\n",
+      "\tmax live=3 first occurred @58091968 ps with prog 8.71% complete\n",
+      "\tand last occurred @58091968 ps with prog 12.6% complete\n",
       "************************************************\n",
       "************************************************\n",
       "Simulator wall clock time (seconds): 24\n"
@@ -561,17 +556,17 @@
       "> Number of Nodes=4\n",
       "> Total Memory (in MiB)=64\n",
       "16c16\n",
-      "< Emu system run time 0.000628 sec==627828000 ps\n",
+      "< Emu system run time 0.000606 sec==605604000 ps\n",
       "---\n",
-      "> Emu system run time 0.000656 sec==655608000 ps\n",
+      "> Emu system run time 0.000667 sec==666720000 ps\n",
       "18,20c18,20\n",
       "< \tactive=0, created=0, died=0,\n",
       "< \tmax live=0 first occurred @0 s with prog 0% complete\n",
       "< \tand last occurred @0 s with prog 0% complete\n",
       "---\n",
       "> \tactive=0, created=14, died=14,\n",
-      "> \tmax live=3 first occurred @58091968 ps with prog 8.86% complete\n",
-      "> \tand last occurred @58091968 ps with prog 12.8% complete\n",
+      "> \tmax live=3 first occurred @58091968 ps with prog 8.71% complete\n",
+      "> \tand last occurred @58091968 ps with prog 12.6% complete\n",
       "23c23\n",
       "< Simulator wall clock time (seconds): 3\n",
       "---\n",
