--- a/code/02-saxpy-basics/NB02-saxpy-basics.ipynb
+++ b/code/02-saxpy-basics/NB02-saxpy-basics.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
        "}"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,12 +219,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We'll test compiling and running this example with a 4 and 8 threads, an array with 32 or 128 elements, and a constant value `a` of 5.0. Then we will check the .cdc and .vsf files to get some high-level statistics on the execution. "
+    "We'll test compiling and running this example with a 4 and 8 threads, an array with 32 or 128 elements, and a constant value `a` of 5.0. Then we will check the .cdc and .vsf files to get some high-level statistics on the execution. \n",
+    "\n",
+    "This notebook will use 8 threads and an array of size 128 for all examples after this one."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +268,7 @@
       "0: 0, 4, 5, 0\n",
       "\n",
       "NodeID: num_reads, num_writes, num_rmws\n",
-      "0: 51, 29, 15\n",
+      "0: 86, 44, 82\n",
       "\n"
      ]
     }
@@ -278,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +321,7 @@
       "0: 0, 8, 9, 0\n",
       "\n",
       "NodeID: num_reads, num_writes, num_rmws\n",
-      "0: 60, 29, 15\n",
+      "0: 123, 48, 274\n",
       "\n"
      ]
     }
@@ -340,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +493,7 @@
        "}"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -502,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -544,7 +546,7 @@
       "0: 0, 0, 1, 0\n",
       "\n",
       "NodeID: num_reads, num_writes, num_rmws\n",
-      "0: 17, 7, 17\n",
+      "0: 25, 9, 25\n",
       "\n"
      ]
     }
@@ -565,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -734,7 +736,7 @@
        "}"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -745,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -757,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -788,7 +790,7 @@
       "0: 0, 8, 9, 0\n",
       "\n",
       "NodeID: num_reads, num_writes, num_rmws\n",
-      "0: 72, 50, 5\n",
+      "0: 129, 63, 261\n",
       "\n"
      ]
     }
@@ -809,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -984,7 +986,7 @@
        "}"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -995,7 +997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1007,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1038,7 +1040,7 @@
       "0: 0, 8, 9, 0\n",
       "\n",
       "NodeID: num_reads, num_writes, num_rmws\n",
-      "0: 72, 50, 5\n",
+      "0: 113, 63, 277\n",
       "\n"
      ]
     }
@@ -1059,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1234,7 +1236,7 @@
        "}\n"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1245,7 +1247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1257,7 +1259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1288,7 +1290,7 @@
       "0: 0, 8, 9, 0\n",
       "\n",
       "NodeID: num_reads, num_writes, num_rmws\n",
-      "0: 356, 422, 3\n",
+      "0: 400, 444, 46\n",
       "\n"
      ]
     }
@@ -1309,7 +1311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1484,7 +1486,7 @@
        "}"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1495,7 +1497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1507,7 +1509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1533,12 +1535,12 @@
       "GCs per Cluster=8\n",
       "************************************************\n",
       "************************************************\n",
-      "Simulator wall clock time (seconds): 1\n",
+      "Simulator wall clock time (seconds): 0\n",
       "Node ID: Outbound Migrations, Threads Created, Threads Died, Spawn Fails\n",
       "0: 0, 8, 9, 0\n",
       "\n",
       "NodeID: num_reads, num_writes, num_rmws\n",
-      "0: 369, 474, 4\n",
+      "0: 427, 495, 1055\n",
       "\n"
      ]
     }
@@ -1559,7 +1561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1737,7 +1739,7 @@
        "}\n"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1748,7 +1750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1760,7 +1762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1791,7 +1793,7 @@
       "0: 0, 8, 9, 0\n",
       "\n",
       "NodeID: num_reads, num_writes, num_rmws\n",
-      "0: 54, 48, 5\n",
+      "0: 121, 62, 261\n",
       "\n"
      ]
     }
@@ -1813,7 +1815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
